syntax = "proto3";

package AcFunDanmu.Im.Cloud.Message;

message LinkedProfileMetaInfo {
	repeated int64 userId = 1;
}
